# ai_opendraft

./: .env.example  .gitignore  LICENSE  README.md  SECURITY.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
engine/: README.md  __init__.py  config.py  draft_generator.py  pyproject.toml  requirements.txt  sentry_config.py
engine/opendraft/: cli.py  version.py
engine/prompts/01_research/: deep_research.md  scout.md
engine/prompts/02_structure/: architect.md
engine/prompts/03_compose/: crafter.md
engine/prompts/04_validate/: verifier.md
engine/prompts/05_refine/: citation_verifier.md
engine/utils/: agent_runner.py  api_tier_detector.py  citation_database.py  deep_research.py  logging_config.py  progress_tracker.py  text_utils.py
engine/utils/api_citations/: base.py  gemini_grounded.py  orchestrator.py  semantic_scholar.py
engine/utils/pdf_engines/: factory.py  libreoffice_engine.py  weasyprint_engine.py
examples/: Why_Academic_Thesis_AI_Saves_The_World.docx
tests/: test_live_crafter.py  test_ticket004_preprints.py
